--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "@nivo/pie": "^0.88.0",
     "@nivo/tooltip": "^0.88.0",
     "@redux-devtools/extension": "^3.3.0",
-    "@reduxjs/toolkit": "^2.6.0",
+    "@reduxjs/toolkit": "^2.6.1",
     "@sentry/browser": "^9.6.0",
     "@sentry/node": "^9.6.0",
     "@sentry/react": "^9.6.0",
@@ -80,40 +80,40 @@
     "compression": "^1.8.0",
     "connect-flash": "0.1.1",
     "connect-redis": "8.0.1",
-    "constate": "^3.3.0",
+    "constate": "^3.3.2",
     "cookie-parser": "^1.4.7",
     "core-js": "^3.41.0",
-    "css-loader": "^7.1.1",
+    "css-loader": "^7.1.2",
     "csurf": "^1.11.0",
     "date-fns": "^4.1.0",
     "del-cli": "^6.0.0",
     "dotenv": "^16.4.7",
-    "elastic-apm-node": "^4.11.0",
+    "elastic-apm-node": "^4.11.2",
     "element-closest": "^3.0.2",
     "express": "^4.21.2",
     "express-minify-html-2": "^2.0.0",
     "express-session": "^1.18.1",
     "express-sslify": "^1.2.0",
-    "follow-redirects": ">=1.15.9",
+    "follow-redirects": "^1.15.9",
     "get-form-data": "^3.0.0",
     "govuk_frontend_toolkit": "^9.0.1",
     "govuk-elements-sass": "^3.1.3",
-    "govuk-frontend": "^5.8.0",
+    "govuk-frontend": "^5.9.0",
     "govuk-react": "^0.10.7",
     "hawk": "^9.0.2",
     "history": "^5.3.0",
-    "http-proxy-middleware": "^3.0.0",
-    "joi": "^17.13.1",
+    "http-proxy-middleware": "^3.0.3",
+    "joi": "^17.13.3",
     "lodash": "^4.17.21",
-    "markdown-it": "^14.0.0",
+    "markdown-it": "^14.1.0",
     "mini-css-extract-plugin": "^2.9.2",
     "morgan": "^1.10.0",
     "numeral": "^2.0.6",
     "nunjucks": "^3.2.4",
     "nunjucks-markdown": "^2.0.1",
     "pluralize": "^8.0.0",
-    "postcss-cli": "^11.0.0",
-    "postcss-loader": "^8.1.0",
+    "postcss-cli": "^11.0.1",
+    "postcss-loader": "^8.1.1",
     "prop-types": "^15.8.1",
     "pure-uuid": "^1.8.1",
     "qs": "^6.14.0",
@@ -122,7 +122,7 @@
     "react-error-boundary": "^5.0.0",
     "react-icons": "^5.5.0",
     "react-lines-ellipsis": "^0.15.4",
-    "react-markdown": "^9.0.1",
+    "react-markdown": "^9.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.3.0",
     "react-string-replace": "^1.1.1",
@@ -135,10 +135,10 @@
     "remark-gfm": "^4.0.1",
     "request-promise": "^4.2.6",
     "resolve-url-loader": "^5.0.0",
-    "sass": "^1.85.0",
-    "sass-loader": "^16.0.4",
+    "sass": "^1.86.0",
+    "sass-loader": "^16.0.5",
     "serve-favicon": "^2.5.0",
-    "sniffr": "^1.3.1",
+    "sniffr": "^1.3.2",
     "style-loader": "^4.0.0",
     "styled-components": "^5.3.11",
     "url": "^0.11.4",
@@ -146,47 +146,47 @@
     "winston": "^3.17.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.9",
-    "@babel/eslint-parser": "^7.26.8",
+    "@babel/core": "^7.26.10",
+    "@babel/eslint-parser": "^7.26.10",
     "@babel/helper-call-delegate": "^7.12.13",
-    "@babel/plugin-syntax-import-assertions": "^7.25.6",
-    "@babel/plugin-transform-class-properties": "^7.25.4",
+    "@babel/plugin-syntax-import-assertions": "^7.26.0",
+    "@babel/plugin-transform-class-properties": "^7.25.9",
     "@babel/plugin-transform-nullish-coalescing-operator": "^7.26.6",
-    "@babel/plugin-transform-object-rest-spread": "^7.24.7",
+    "@babel/plugin-transform-object-rest-spread": "^7.25.9",
     "@babel/plugin-transform-optional-chaining": "^7.25.9",
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-react": "^7.26.3",
     "@babel/preset-typescript": "^7.26.0",
     "@babel/register": "^7.25.9",
-    "@babel/runtime": "^7.26.0",
-    "@chromatic-com/storybook": "^3.2.3",
-    "@cypress/code-coverage": "^3.13.10",
+    "@babel/runtime": "^7.26.10",
+    "@chromatic-com/storybook": "^3.2.6",
+    "@cypress/code-coverage": "^3.13.12",
     "@eslint/compat": "^1.2.7",
     "@eslint/eslintrc": "^3.3.0",
     "@eslint/js": "^9.21.0",
     "@faker-js/faker": "^9.6.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
-    "@storybook/addon-a11y": "^8.5.5",
-    "@storybook/addon-essentials": "^8.5.5",
+    "@storybook/addon-a11y": "^8.6.7",
+    "@storybook/addon-essentials": "^8.6.7",
     "@storybook/addon-webpack5-compiler-babel": "^3.0.5",
     "@storybook/manager-api": "^8.5.5",
     "@storybook/react": "^8.5.5",
-    "@storybook/react-webpack5": "^8.5.5",
+    "@storybook/react-webpack5": "^8.6.7",
     "@storybook/test": "^8.5.5",
     "babel-loader": "^9.2.1",
     "babel-plugin-istanbul": "7.0.0",
     "chai": "^4.5.0",
     "chai-subset": "^1.6.0",
-    "cypress": "^14.0.3",
+    "cypress": "^14.2.0",
     "cypress-axe": "^1.6.0",
-    "eslint": "^9.21.0",
-    "eslint-config-prettier": "^10.0.1",
+    "eslint": "^9.22.0",
+    "eslint-config-prettier": "^10.1.1",
     "eslint-formatter-junit": "^8.40.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-mocha": "^10.5.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-promise": "^7.2.1",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.2.0",
@@ -200,7 +200,7 @@
     "jsdom": "^26.0.0",
     "jsdom-global": "^3.0.2",
     "json-schema-faker": "^0.5.8",
-    "lint-staged": "^15.4.3",
+    "lint-staged": "^15.5.0",
     "mocha": "^11.1.0",
     "mocha-junit-reporter": "^2.2.1",
     "mochapack": "^2.1.5",
@@ -218,10 +218,10 @@
     "sinon": "^19.0.2",
     "sinon-chai": "^3.7.0",
     "std-mocks": "^2.0.0",
-    "storybook": "^8.5.5",
+    "storybook": "^8.6.7",
     "supertest": "^7.0.0",
     "webpack": "^5.98.0",
-    "webpack-assets-manifest": "^5.1.0",
+    "webpack-assets-manifest": "^5.2.1",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.0",
     "webpack-node-externals": "^3.0.0"
