--- a/package.json
+++ b/package.json
@@ -113,8 +113,8 @@
     "prop-types": "^15.8.1",
     "pure-uuid": "^1.8.1",
     "qs": "^6.14.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-error-boundary": "^5.0.0",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
@@ -224,6 +224,9 @@
   "overrides": {
     "yaml": "^2.2.2",
     "semver": "7.5.2",
-    "tough-cookie": "4.1.3"
+    "tough-cookie": "4.1.3",
+    "constate": {
+      "react": "19.1.0"
+    }
   }
 }
